fix: fixed text overflow issue on skills quiz (#685)

--- a/src/components/skills-quiz/styles/TopSkillsOverview.scss
+++ b/src/components/skills-quiz/styles/TopSkillsOverview.scss
@@ -45,3 +45,7 @@
   font-weight: 500;
   display: inline;
 }
+
+.full-max-width {
+  max-width: 100%;
+}
